{
  "version": 4,
  "terraform_version": "0.12.28",
  "serial": 515,
  "lineage": "0b265ffc-2248-962d-ba9d-8a5bf20a949d",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "us-west-2a-ngw-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-052177a4f08d71ea7",
            "domain": "vpc",
            "id": "eipalloc-0418ac1de69c1ff6a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0803341f61b079be7",
            "private_dns": "ip-10-27-65-198.us-west-2.compute.internal",
            "private_ip": "10.27.65.198",
            "public_dns": "ec2-44-239-108-139.us-west-2.compute.amazonaws.com",
            "public_ip": "44.239.108.139",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-west-2a-ngw-eip",
              "randomuser.org/usage": "egress"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "us-west-2b-ngw-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-00b90d356018a7951",
            "domain": "vpc",
            "id": "eipalloc-01a1957c77877d4ec",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0685af10c47c56868",
            "private_dns": "ip-10-27-70-204.us-west-2.compute.internal",
            "private_ip": "10.27.70.204",
            "public_dns": "ec2-52-42-216-106.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.216.106",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-west-2b-ngw-eip",
              "randomuser.org/usage": "egress"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "us-west-2c-ngw-eip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0bb2121fa82028ee4",
            "domain": "vpc",
            "id": "eipalloc-0ff1f5eec953a828a",
            "network_border_group": "us-west-2",
            "network_interface": "eni-00231f5f273957f4b",
            "private_dns": "ip-10-27-73-27.us-west-2.compute.internal",
            "private_ip": "10.27.73.27",
            "public_dns": "ec2-44-239-81-172.us-west-2.compute.amazonaws.com",
            "public_ip": "44.239.81.172",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "us-west-2c-ngw-eip",
              "randomuser.org/usage": "egress"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.k8s_masters",
      "mode": "managed",
      "type": "aws_elb",
      "name": "k8s_vip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:890068964236:loadbalancer/cluster0-k8s",
            "availability_zones": [
              "us-west-2a",
              "us-west-2b",
              "us-west-2c"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": false,
            "dns_name": "internal-cluster0-k8s-180014551.us-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 10,
                "interval": 30,
                "target": "TCP:6443",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "cluster0-k8s",
            "idle_timeout": 60,
            "internal": true,
            "listener": [
              {
                "instance_port": 6443,
                "instance_protocol": "tcp",
                "lb_port": 6443,
                "lb_protocol": "tcp"
              }
            ],
            "name": "cluster0-k8s",
            "security_groups": [
              "sg-049da22c039063574"
            ],
            "source_security_group": "890068964236/master_sg",
            "source_security_group_id": "sg-049da22c039063574",
            "subnets": [
              "subnet-077b104492efcb1ae",
              "subnet-0a931b483fa77e6a2",
              "subnet-0f3f12f16826ae711"
            ],
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.k8s_masters.aws_security_group.master_sg",
            "module.vpc.aws_subnet.us-west-2a-private-subnet",
            "module.vpc.aws_subnet.us-west-2b-private-subnet",
            "module.vpc.aws_subnet.us-west-2c-private-subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_cloud_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:internet-gateway/igw-060e2fdfd31136d35",
            "id": "igw-060e2fdfd31136d35",
            "owner_id": "890068964236",
            "tags": {
              "Name": "public_cloud_gateway",
              "randomuser.org/usage": "egress"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "us-west-2a-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0418ac1de69c1ff6a",
            "id": "nat-0e586998225a05bd3",
            "network_interface_id": "eni-0803341f61b079be7",
            "private_ip": "10.27.65.198",
            "public_ip": "44.239.108.139",
            "subnet_id": "subnet-05b5e0d1507f2e30e",
            "tags": {
              "Name": "us-west-2a-ngw",
              "randomuser.org/usage": "egress"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.us-west-2a-ngw-eip",
            "module.vpc.aws_subnet.us-west-2a-public-subnet",
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "us-west-2b-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01a1957c77877d4ec",
            "id": "nat-0e58bba93d7002f81",
            "network_interface_id": "eni-0685af10c47c56868",
            "private_ip": "10.27.70.204",
            "public_ip": "52.42.216.106",
            "subnet_id": "subnet-01976d60f3038cd4b",
            "tags": {
              "Name": "us-west-2b-ngw",
              "randomuser.org/usage": "egress"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.us-west-2b-ngw-eip",
            "module.vpc.aws_subnet.us-west-2b-public-subnet",
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "us-west-2c-ngw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ff1f5eec953a828a",
            "id": "nat-00f6ed17d47327dbf",
            "network_interface_id": "eni-00231f5f273957f4b",
            "private_ip": "10.27.73.27",
            "public_ip": "44.239.81.172",
            "subnet_id": "subnet-02e9ac01f0eed9093",
            "tags": {
              "Name": "us-west-2c-ngw",
              "randomuser.org/usage": "egress"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.us-west-2c-ngw-eip",
            "module.vpc.aws_subnet.us-west-2c-public-subnet",
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2a-private-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0afbafaca69e2d9ed",
            "owner_id": "890068964236",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e586998225a05bd3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.27.0.0/20",
                "egress_only_gateway_id": null,
                "gateway_id": "vgw-0cfd7f0b7e8ab5a1c",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "us-west-2a_private_route",
              "randomuser.org/usage": "compute"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.us-west-2a-ngw",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2a-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d7692d2b396a8387",
            "owner_id": "890068964236",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060e2fdfd31136d35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.27.0.0/20",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-0cfd7f0b7e8ab5a1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-2a_public_route",
              "randomuser.org/usage": "egress"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_cloud_gateway",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2b-private-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-079ab0df7e2ca97e8",
            "owner_id": "890068964236",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e58bba93d7002f81",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.27.0.0/20",
                "egress_only_gateway_id": null,
                "gateway_id": "vgw-0cfd7f0b7e8ab5a1c",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "us-west-2b_private_route",
              "randomuser.org/usage": "compute"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.us-west-2b-ngw",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2b-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06c990056d7b34762",
            "owner_id": "890068964236",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060e2fdfd31136d35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.27.0.0/20",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-0cfd7f0b7e8ab5a1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-2b_public_route",
              "randomuser.org/usage": "egress"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_cloud_gateway",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2c-private-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c1868429e5c5818b",
            "owner_id": "890068964236",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-00f6ed17d47327dbf",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.27.0.0/20",
                "egress_only_gateway_id": null,
                "gateway_id": "vgw-0cfd7f0b7e8ab5a1c",
                "instance_id": null,
                "ipv6_cidr_block": null,
                "local_gateway_id": null,
                "nat_gateway_id": null,
                "network_interface_id": null,
                "transit_gateway_id": null,
                "vpc_peering_connection_id": null
              }
            ],
            "tags": {
              "Name": "us-west-2c_private_route",
              "randomuser.org/usage": "compute"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_nat_gateway.us-west-2c-ngw",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "us-west-2c-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0400176806f15a3c1",
            "owner_id": "890068964236",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-060e2fdfd31136d35",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.27.0.0/20",
                "egress_only_gateway_id": "",
                "gateway_id": "vgw-0cfd7f0b7e8ab5a1c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "us-west-2c_public_route",
              "randomuser.org/usage": "egress"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_cloud_gateway",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2a-private-routeassoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09c7d5a0260f1fca9",
            "route_table_id": "rtb-0afbafaca69e2d9ed",
            "subnet_id": "subnet-0f3f12f16826ae711"
          },
          "dependencies": [
            "module.vpc.aws_eip.us-west-2a-ngw-eip",
            "module.vpc.aws_nat_gateway.us-west-2a-ngw",
            "module.vpc.aws_route_table.us-west-2a-private-route",
            "module.vpc.aws_subnet.us-west-2a-private-subnet",
            "module.vpc.aws_subnet.us-west-2a-public-subnet",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2a-public-routeassoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08daa8c1dc5006d08",
            "route_table_id": "rtb-0d7692d2b396a8387",
            "subnet_id": "subnet-05b5e0d1507f2e30e"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_cloud_gateway",
            "module.vpc.aws_route_table.us-west-2a-public-route",
            "module.vpc.aws_subnet.us-west-2a-public-subnet",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2b-private-routeassoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a55cbeffed62ad31",
            "route_table_id": "rtb-079ab0df7e2ca97e8",
            "subnet_id": "subnet-0a931b483fa77e6a2"
          },
          "dependencies": [
            "module.vpc.aws_eip.us-west-2b-ngw-eip",
            "module.vpc.aws_nat_gateway.us-west-2b-ngw",
            "module.vpc.aws_route_table.us-west-2b-private-route",
            "module.vpc.aws_subnet.us-west-2b-private-subnet",
            "module.vpc.aws_subnet.us-west-2b-public-subnet",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2b-public-routeassoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afe1d46ce52153b2",
            "route_table_id": "rtb-06c990056d7b34762",
            "subnet_id": "subnet-01976d60f3038cd4b"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_cloud_gateway",
            "module.vpc.aws_route_table.us-west-2b-public-route",
            "module.vpc.aws_subnet.us-west-2b-public-subnet",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2c-private-routeassoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049ead1b70983aa95",
            "route_table_id": "rtb-0c1868429e5c5818b",
            "subnet_id": "subnet-077b104492efcb1ae"
          },
          "dependencies": [
            "module.vpc.aws_eip.us-west-2c-ngw-eip",
            "module.vpc.aws_nat_gateway.us-west-2c-ngw",
            "module.vpc.aws_route_table.us-west-2c-private-route",
            "module.vpc.aws_subnet.us-west-2c-private-subnet",
            "module.vpc.aws_subnet.us-west-2c-public-subnet",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "us-west-2c-public-routeassoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b8ade3dcec793af5",
            "route_table_id": "rtb-0400176806f15a3c1",
            "subnet_id": "subnet-02e9ac01f0eed9093"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.public_cloud_gateway",
            "module.vpc.aws_route_table.us-west-2c-public-route",
            "module.vpc.aws_subnet.us-west-2c-public-subnet",
            "module.vpc.aws_vpc.cluster1",
            "module.vpc.aws_vpn_gateway.cluster1_vpc_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.etcd_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "etcd_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:security-group/sg-05a95eb8540730708",
            "description": "etcd cluster sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a95eb8540730708",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.27.0.0/16"
                ],
                "description": "management access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.27.64.0/18"
                ],
                "description": "etcd client",
                "from_port": 2379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2379
              },
              {
                "cidr_blocks": [
                  "10.27.64.0/18"
                ],
                "description": "etcd peer",
                "from_port": 2380,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 2380
              }
            ],
            "name": "etcd_sg",
            "name_prefix": "",
            "owner_id": "890068964236",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "cluster0",
              "Name": "etcd_sg",
              "randomuser.org/usage": "etcd"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.k8s_masters",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "master_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:security-group/sg-049da22c039063574",
            "description": "master cluster sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-049da22c039063574",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.27.0.0/16"
                ],
                "description": "k8s api",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "10.27.0.0/16"
                ],
                "description": "management access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "master_sg",
            "name_prefix": "",
            "owner_id": "890068964236",
            "revoke_rules_on_delete": false,
            "tags": {
              "KubernetesCluster": "cluster0",
              "Name": "master_sg",
              "randomuser.org/usage": "control-plane"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2a-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:subnet/subnet-0f3f12f16826ae711",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.27.80.0/20",
            "id": "subnet-0f3f12f16826ae711",
            "map_public_ip_on_launch": false,
            "owner_id": "890068964236",
            "tags": {
              "Name": "us-west-2a-private-subnet",
              "randomuser.org/usage": "compute"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2a-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:subnet/subnet-05b5e0d1507f2e30e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.27.64.0/22",
            "id": "subnet-05b5e0d1507f2e30e",
            "map_public_ip_on_launch": false,
            "owner_id": "890068964236",
            "tags": {
              "Name": "us-west-2a-public-subnet",
              "randomuser.org/usage": "egress"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2b-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:subnet/subnet-0a931b483fa77e6a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.27.96.0/20",
            "id": "subnet-0a931b483fa77e6a2",
            "map_public_ip_on_launch": false,
            "owner_id": "890068964236",
            "tags": {
              "Name": "us-west-2b-private-subnet",
              "randomuser.org/usage": "compute"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2b-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:subnet/subnet-01976d60f3038cd4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.27.68.0/22",
            "id": "subnet-01976d60f3038cd4b",
            "map_public_ip_on_launch": false,
            "owner_id": "890068964236",
            "tags": {
              "Name": "us-west-2b-public-subnet",
              "randomuser.org/usage": "egress"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2c-private-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:subnet/subnet-077b104492efcb1ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.27.112.0/20",
            "id": "subnet-077b104492efcb1ae",
            "map_public_ip_on_launch": false,
            "owner_id": "890068964236",
            "tags": {
              "Name": "us-west-2c-private-subnet",
              "randomuser.org/usage": "compute"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2c-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:subnet/subnet-02e9ac01f0eed9093",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.27.72.0/22",
            "id": "subnet-02e9ac01f0eed9093",
            "map_public_ip_on_launch": false,
            "owner_id": "890068964236",
            "tags": {
              "Name": "us-west-2c-public-subnet",
              "randomuser.org/usage": "egress"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "us-west-2d-public-subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:subnet/subnet-06f09f09743688b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2d",
            "availability_zone_id": "usw2-az4",
            "cidr_block": "10.27.76.0/22",
            "id": "subnet-06f09f09743688b9e",
            "map_public_ip_on_launch": false,
            "owner_id": "890068964236",
            "tags": {
              "Name": "UNUSED-us-west-2d-public-subnet",
              "randomuser.org/usage": "placeholder"
            },
            "vpc_id": "vpc-08c026ed9b4fb1fc7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster1"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:890068964236:vpc/vpc-08c026ed9b4fb1fc7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.27.64.0/18",
            "default_network_acl_id": "acl-0af983aa55d2d1b22",
            "default_route_table_id": "rtb-0c8523de58acbadd7",
            "default_security_group_id": "sg-04a70637d63df153d",
            "dhcp_options_id": "dopt-cbaaa4a9",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08c026ed9b4fb1fc7",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c8523de58acbadd7",
            "owner_id": "890068964236",
            "tags": {
              "Name": "public-cloud",
              "randomuser.org/usage": "public-cloud"
            }
          }
        }
      ]
    }
  ]
}